--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,24 @@
 
 /* Your CSS Code here. */
+ nav {
+            background-color: #333;
+            padding: 10px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+        li {
+            margin-right: 15px;
+        }
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+        }
+        .container {
+            text-align: center;
+            margin-top: 20px;
+        }
